Got working edit & delete buttons for songs, implemented bootstraps modal windows for both, along with the error on submitting an incomplete song.  Realized after weird post-editing issues that having the click/etc handlers within the on db change funciton was BAD.  Moved everything outside the function and moved a bunch of variables outside as well to retain access.  Moved all handlebars templates into their own module for ease in calling throughout the other modules & funcions without cluttering the main function too much.

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -149,6 +149,10 @@ a, .btn {
   }
 }
 
+.modal-body em {
+  color: $accent-color;
+}
+
 .btn-danger,
 .btn-success {
   color: $primary-color !important;
